optimization and improvement

--- a/views/profile.html
+++ b/views/profile.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="/assets/css/common/reset.css">
   <link rel="stylesheet" href="/assets/css/iconfont.css">
   <link rel="stylesheet" href="/dist/assets/css/common/base.css">
-  <!-- <link rel="stylesheet" href="/dist/assets/css/common.css"> -->
-  <link rel="stylesheet" href="/dist/assets/css/vue-components.css">
+  <link rel="stylesheet" href="/dist/assets/css/common.css">
   <!-- endbuild -->
   <!-- build:css /assets/css/profile.css inline -->
   <link rel="stylesheet" href="/dist/assets/css/profile.css">
@@ -29,7 +28,6 @@
   <!-- endbuild -->
   <!-- build:js /assets/js/common.js -->
   <script src="/dist/assets/js/common.js"></script>
-  <script src="/dist/assets/js/vue-components.js"></script>
   <!-- endbuild -->
   <!-- build:js /assets/js/profile/main.js inline -->
   <script src="/dist/assets/js/profile/main.js"></script>
